--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "scripts": {
     "artifacts": "napi artifacts",
-    "build": "napi build --platform --release --js ./native.cjs --dts ./native.d.cts ./js && tsc && cp ./js/*.node ./dist ",
-    "build:debug": "napi build --platform --js ./native.cjs --dts ./native.d.cts ./js && tsc && cp ./js/*.node ./dist",
+    "build": "napi build --platform --release --js ./native.cjs --dts ./native.d.cts ./js $* && tsc && cp ./js/*.node ./dist",
+    "build:debug": "napi build --platform --js ./native.cjs --dts ./native.d.cts ./js $* && tsc && cp ./js/*.node ./dist",
     "prepublishOnly": "napi prepublish -t npm",
     "test": "vitest run",
     "universal": "napi universal",
