--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -148,6 +148,8 @@ jobs:
         with:
           name: bindings-x86_64-unknown-linux-gnu
           path: .
+      - name: pwd
+        run: pwd && ls -la
       - name: List packages
         run: ls -R .
         shell: bash
