--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -179,7 +179,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: bindings-x86_64-unknown-linux-musl
-          path: .
+          path: ./js
       - name: List packages
         run: ls -R .
         shell: bash
@@ -202,7 +202,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: bindings-aarch64-unknown-linux-gnu
-          path: .
+          path: ./js
       - name: List packages
         run: ls -R .
         shell: bash
@@ -236,7 +236,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: bindings-aarch64-unknown-linux-musl
-          path: .
+          path: ./js
       - name: List packages
         run: ls -R .
         shell: bash
@@ -275,7 +275,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: bindings-armv7-unknown-linux-gnueabihf
-          path: .
+          path: ./js
       - name: List packages
         run: ls -R .
         shell: bash
