--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -151,6 +151,13 @@ jobs:
       - name: List packages
         run: ls -R .
         shell: bash
+      - name: Setup vcan0
+        run: |
+          sudo modprobe can
+          sudo modprobe can_raw
+          sudo modprobe vcan
+          sudo ip link add dev vcan0 type vcan
+          sudo ip link set up vcan0
       - name: Test bindings
         run: docker run --rm -v $(pwd):/build -w /build node:${{ matrix.node }}-slim yarn test
   test-linux-x64-musl-binding:
