--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -153,6 +153,7 @@ jobs:
         shell: bash
       - name: Setup vcan0
         run: |
+          sudo apt-get install -y linux-modules-extra-$(uname -r)
           sudo modprobe can
           sudo modprobe can_raw
           sudo modprobe vcan
