--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -151,9 +151,10 @@ jobs:
       - name: List packages
         run: ls -R .
         shell: bash
-      - name: Setup vcan0
+      - name: Install can support
+        run: sudo apt-get install -y linux-modules-extra-$(uname -r)
+      - name: Setup vcan interface
         run: |
-          sudo apt-get install -y linux-modules-extra-$(uname -r)
           sudo modprobe can
           sudo modprobe can_raw
           sudo modprobe vcan
