--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,17 +152,13 @@ jobs:
         run: ls -R .
         shell: bash
       - name: Test bindings
-        run: |
-          docker run --rm -v $(pwd):/build -w /build --privileged node:${{ matrix.node }}-slim bash -c "
-            apt-get update && \
-            apt-get install -y kmod linux-modules-generic can-utils iproute2 && \
-            modprobe can && \
-            modprobe can_raw && \
-            modprobe vcan && \
-            ip link add dev vcan0 type vcan && \
-            ip link set up vcan0 && \
+        uses: addnab/docker-run-action@v3
+        with:
+          image: node:${{ matrix.node }}-slim
+          options: '--privileged -v ${{ github.workspace }}:/build -w /build'
+          run: |
+            echo 'wow'
             yarn test
-          "
   test-linux-x64-musl-binding:
     name: Test bindings on x86_64-unknown-linux-musl - node@${{ matrix.node }}
     needs:
