--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -170,6 +170,7 @@ jobs:
             echo 'setting up vcan0 interface'
             sudo ip link add dev vcan0 type vcan
             sudo ip link set up vcan0
+            sudo ip link show
             echo 'running tests'
             yarn test
   # test-linux-x64-musl-binding:
