--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ dist
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
+.vscode
 .vscode-test
 
 # End of https://www.toptal.com/developers/gitignore/api/node
@@ -121,7 +122,7 @@ dist
 .AppleDouble
 .LSOverride
 
-# Icon must end with two 
+# Icon must end with two
 Icon
 
 
