--- a/package.json
+++ b/package.json
@@ -22,12 +22,6 @@
     }
   },
   "license": "MIT",
-  "devDependencies": {
-    "@napi-rs/cli": "^2.18.4",
-    "@types/node": "^22.10.2",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
-  },
   "engines": {
     "node": ">= 10"
   },
@@ -43,5 +37,12 @@
   "packageManager": "yarn@4.5.3",
   "dependencies": {
     "@rgrove/parse-xml": "^4.2.0"
+  },
+  "devDependencies": {
+    "@napi-rs/cli": "^2.18.4",
+    "@types/node": "^22.10.2",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
