--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   },
   "packageManager": "yarn@4.5.3",
   "dependencies": {
-    "@rgrove/parse-xml": "^4.2.0"
+    "@rgrove/parse-xml": "^4.2.0",
+    "blessed": "^0.1.81"
   },
   "devDependencies": {
     "@napi-rs/cli": "^2.18.4",
+    "@types/blessed": "^0",
     "@types/node": "^22.10.2",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
