--- a/npm/linux-x64-musl/package.json
+++ b/npm/linux-x64-musl/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@davtomkra/canola-linux-x64-musl",
+  "name": "@canola/core-linux-x64-musl",
   "version": "0.0.0",
   "os": [
     "linux"
@@ -7,14 +7,15 @@
   "cpu": [
     "x64"
   ],
-  "main": "canola.linux-x64-musl.node",
+  "main": "core.linux-x64-musl.node",
   "files": [
-    "canola.linux-x64-musl.node"
+    "core.linux-x64-musl.node"
   ],
   "license": "MIT",
   "engines": {
     "node": ">= 10"
   },
+  "repository": "https://github.com/davidtkramer/canola",
   "libc": [
     "musl"
   ]
