--- a/npm/linux-arm-gnueabihf/package.json
+++ b/npm/linux-arm-gnueabihf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@davtomkra/canola-linux-arm-gnueabihf",
+  "name": "@canola/core-linux-arm-gnueabihf",
   "version": "0.0.0",
   "os": [
     "linux"
@@ -7,12 +7,13 @@
   "cpu": [
     "arm"
   ],
-  "main": "canola.linux-arm-gnueabihf.node",
+  "main": "core.linux-arm-gnueabihf.node",
   "files": [
-    "canola.linux-arm-gnueabihf.node"
+    "core.linux-arm-gnueabihf.node"
   ],
   "license": "MIT",
   "engines": {
     "node": ">= 10"
-  }
+  },
+  "repository": "https://github.com/davidtkramer/canola"
 }
