--- a/npm/linux-arm64-gnu/package.json
+++ b/npm/linux-arm64-gnu/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@davtomkra/canola-linux-arm64-gnu",
+  "name": "@canola/core-linux-arm64-gnu",
   "version": "0.0.0",
   "os": [
     "linux"
@@ -7,14 +7,15 @@
   "cpu": [
     "arm64"
   ],
-  "main": "canola.linux-arm64-gnu.node",
+  "main": "core.linux-arm64-gnu.node",
   "files": [
-    "canola.linux-arm64-gnu.node"
+    "core.linux-arm64-gnu.node"
   ],
   "license": "MIT",
   "engines": {
     "node": ">= 10"
   },
+  "repository": "https://github.com/davidtkramer/canola",
   "libc": [
     "glibc"
   ]
