--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   },
-  "repository": "https://github.com/davidtkramer/canola"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davidtkramer/canola.git"
+  }
 }
