--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "sourceMap": true,
     "moduleResolution": "NodeNext",
     "emitDeclarationOnly": false,
+    "jsx": "react",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "h.Fragment",
 
     /* AND if you're building for a library: */
     "declaration": true
